fix: overflow wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -778,7 +778,11 @@ main {
 
   section,
   article {
-    overflow-wrap: anywhere;
+    overflow-wrap: break-word;
+
+    [lang='pli'] {
+      overflow-wrap: anywhere;
+    }
 
     button[popovertarget] {
       display: none;
